fix align

--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@ body {
   width: 100%;
   background-color: #E8F0FA;
 }
+main{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .header {
   display: flex;
@@ -54,7 +59,6 @@ body {
   width: 62.5rem;
   height: 450px;
   background-color: #d1e0f5;
-  margin: auto;
   box-shadow: 0px 8px 10px gray, -10px 8px 15px gray, 10px 8px 15px gray;
   z-index: 2;
 }
@@ -86,7 +90,6 @@ body {
 
 .about {
   width: 61rem;
-  margin: auto;
   border: 1px solid #01528c;
   border-top: 0;
   border-bottom: 0;
@@ -170,7 +173,6 @@ body {
 
 .manufacturing {
   width: 62.5rem;
-  margin: auto;
   border: 1px solid #01528c;
   box-shadow: 0px 8px 10px gray, -10px 8px 15px gray, 10px 8px 15px gray;
   background-image: url(./img/10.svg);
